[gd_scene load_steps=7 format=2]

[ext_resource path="res://script/pause.gd" type="Script" id=1]
[ext_resource path="res://scene/button_weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/menu/continue.png" type="Texture" id=3]
[ext_resource path="res://art/menu/again.png" type="Texture" id=4]
[ext_resource path="res://art/menu/leave.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource_name = "open"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("quitter:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 128 ), Vector2( 160, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("relancer:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 96 ), Vector2( 193, 96 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("continue:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 64 ), Vector2( 160, 64 ) ]
}

[node name="pause" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="continue" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 160.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 96.0
_sections_unfolded = [ "Rect" ]

[node name="TextureRect" type="TextureRect" parent="continue" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_right = 31.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4

[node name="relancer" parent="." index="1" instance=ExtResource( 2 )]

margin_left = 193.0
margin_top = 96.0
margin_right = 225.0
margin_bottom = 128.0
_sections_unfolded = [ "Rect" ]

[node name="TextureRect2" type="TextureRect" parent="relancer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 4

[node name="quitter" parent="." index="2" instance=ExtResource( 2 )]

margin_left = 160.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 160.0
_sections_unfolded = [ "Rect" ]

[node name="TextureRect3" type="TextureRect" parent="quitter" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 4

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "open"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 4.0
anims/open = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]

[connection signal="pressed" from="relancer" to="." method="_on_relancer_pressed"]

[connection signal="pressed" from="quitter" to="." method="_on_quitter_pressed"]


